Changed: merged with "data-analysis" (WIP);

--- a/public/config.html
+++ b/public/config.html
@@ -17,7 +17,7 @@
       <form action='api/upload' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
         <fieldset class='wrapper'>
           <div class='frm-row'>
-            <label for='frm-url'>Subir archivo</label>
+            <label for='fileinput'>Subir archivo</label>
             <input class='main-input' id='fileinput' name='file' placeholder='Subir archivo' required='required' type='file'>
           </div>
           <div class='frm-row actions-bar'>
