--- a/public/config.html
+++ b/public/config.html
@@ -8,7 +8,7 @@
     <link href='css/qaw-server.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <section class='main' id='step-1'>
+    <section class='main-config' id='step-1'>
       <header class='header-sticky'>
         <div class='wrapper'>
           <div class='logo logo-small'>QA Wall</div>
