--- a/public/app.html
+++ b/public/app.html
@@ -12,6 +12,6 @@
   </head>
   <body class='app-mesagges'>
     <div id='chartContainer' style='height: 300px; width: 100;'></div>
-    <script data-main='js/qaw' src='js/libs/requirejs-min.js' type='text/javascript'></script>
+    <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
   </body>
 </html>
