Change: the chart to test first zoom manually, and dynamic live bar

--- a/public/config.html
+++ b/public/config.html
@@ -20,7 +20,7 @@
             <label for='fileinput'>Subir archivo</label>
             <input class='main-input' id='fileinput' name='file' placeholder='Subir archivo' required='required' type='file'>
           </div>
-          <div class='frm-row actions-bar'>
+          <div class='frm-row  '>
             <!--
               <input class='btn' type='reset' value='Reset'>
               <input class='btn close' type='button' value='Apagar'>
