--- a/public/app.html
+++ b/public/app.html
@@ -13,5 +13,10 @@
   <body class='app-mesagges'>
     <div id='chartContainer' style='height: 300px; width: 100;'></div>
     <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
+    <div id="contentButton">
+      <button id="buttonLive" class="buttonAux" type="button">Live/Stop</button>
+      <button id="buttonAddEvent" class="buttonAux" type="button">Add Event</button>
+      <button id="buttonSeeAll" class="buttonAux" type="button">See All/Reset</button>
+    </div>
   </body>
 </html>
