Change: control movement, and live bar on seconds

--- a/public/app.html
+++ b/public/app.html
@@ -16,7 +16,9 @@
     <div id="contentButton">
       <button id="buttonLive" class="buttonAux" type="button">Live/Stop</button>
       <button id="buttonAddEvent" class="buttonAux" type="button">Add Event</button>
+      <button id="buttonEndEvent" class="buttonAux" type="button">End Event</button>
       <button id="buttonSeeAll" class="buttonAux" type="button">See All/Reset</button>
+      <button id="buttonControlMovement" class="buttonAux" type="button">Control Movement</button>
     </div>
   </body>
 </html>
