--- a/public/app.html
+++ b/public/app.html
@@ -14,9 +14,11 @@
     <div id='chartContainer' style='height: 300px; width: 100;'></div>
     <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
     <div id="contentButton">
+      <!-- DEBUG BUTTONS
       <button id="buttonLive" class="buttonAux" type="button">Live/Stop</button>
       <button id="buttonAddEvent" class="buttonAux" type="button">Add Event</button>
       <button id="buttonEndEvent" class="buttonAux" type="button">End Event</button>
+      -->
       <button id="buttonSeeAll" class="buttonAux" type="button">See All/Reset</button>
       <button id="buttonControlMovement" class="buttonAux" type="button">Control Movement</button>
     </div>
