--- a/public/config.html
+++ b/public/config.html
@@ -31,6 +31,6 @@
       </form>
     </section>
     <section class='main' id='step-2'></section>
-    <script data-main='js/qaw-server' src='js/libs/requirejs-min.js' type='text/javascript'></script>
+    <script data-main='js/qaw-config' src='js/libs/requirejs-min.js' type='text/javascript'></script>
   </body>
 </html>
