--- a/public/app.html
+++ b/public/app.html
@@ -4,23 +4,25 @@
     <meta charset='UTF-8'>
     <title>QA WALL</title>
     <link href='images/favicon.ico' rel='shortcut icon'>
-    <link href='css/normalize.css' rel='stylesheet' type='text/css'>
     <link href='css/qaw-server.css' rel='stylesheet' type='text/css'>
-    <link href='css/rickshaw.css' rel='stylesheet' type='text/css'>
-    <link href='css/graph.css' rel='stylesheet' type='text/css'>
-    <link href='css/lines.css' rel='stylesheet' type='text/css'>
   </head>
   <body class='app-mesagges'>
-    <div id='chartContainer' style='height: 300px; width: 100;'></div>
+    <div id='chartContainer' style='height: 500px; width: 100;'></div>
     <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
     <div id="contentButton">
-      <!-- DEBUG BUTTONS
+       <!-- DEBUG BUTTONS
       <button id="buttonLive" class="buttonAux" type="button">Live/Stop</button>
       <button id="buttonAddEvent" class="buttonAux" type="button">Add Event</button>
       <button id="buttonEndEvent" class="buttonAux" type="button">End Event</button>
       -->
-      <button id="buttonSeeAll" class="buttonAux" type="button">See All/Reset</button>
-      <button id="buttonControlMovement" class="buttonAux" type="button">Control Movement</button>
+        <div class='actions-bar-zoom'>
+              <input id="buttonZoomIn" class="btn primary" type="button" value='+'>
+              <input id="buttonZoomOut" class="btn primary" type="button" value='-'>
+        </div>
+        <div class='actions-bar-buttons'>
+            <input id="buttonSeeAll" class="btn" type="button" value='See All/Reset'>
+            <input id="buttonControlMovement" class="btn" type="button" value='Control Movement'>
+        </div>
     </div>
   </body>
 </html>
