Change: more changes app.html, and show logo

--- a/public/app.html
+++ b/public/app.html
@@ -2,12 +2,13 @@
 <html>
   <head lang='es'>
     <meta charset='UTF-8'>
-    <title>QA WALL</title>
+    <title>QA WALL Events</title>
     <link href='images/favicon.ico' rel='shortcut icon'>
     <link href='css/qaw-server.css' rel='stylesheet' type='text/css'>
   </head>
   <body class='app-mesagges'>
-    <div id='chartContainer' style='height: 500px; width: 100;'></div>
+    <h1 class='logo logo-big'>QA Wall Events</h1>
+    <div id='chartContainer' style='height: 600px; width: 100;'></div>
     <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
     <div id="contentButton">
        <!-- DEBUG BUTTONS
