--- a/public/app.html
+++ b/public/app.html
@@ -21,8 +21,8 @@
               <input id="buttonZoomOut" class="btn primary" type="button" value='-'>
         </div>
         <div class='actions-bar-buttons'>
-            <input id="buttonSeeAll" class="btn" type="button" value='See All/Reset'>
-            <input id="buttonControlMovement" class="btn" type="button" value='Control Movement'>
+            <input id="buttonSeeAll" class="btn" type="button" value='SEE ALL'>
+            <input id="buttonControlMovement" class="btn" type="button" value='MOVE ON'>
         </div>
     </div>
   </body>
