Change: add a select to control devices id on js

--- a/public/app.html
+++ b/public/app.html
@@ -25,5 +25,6 @@
             <input id="buttonControlMovement" class="btn" type="button" value='MOVE ON'>
         </div>
     </div>
+    <select id="selectDevice" name='device' placeholder='Device Id'></select>
   </body>
 </html>
