Added: not working upload (but progress has been made);

--- a/public/config.html
+++ b/public/config.html
@@ -14,11 +14,11 @@
           <div class='logo logo-small'>QA Wall</div>
         </div>
       </header>
-      <form action='api/upload' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
+      <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
         <fieldset class='wrapper'>
           <div class='frm-row'>
             <label for='fileinput'>Subir archivo</label>
-            <input class='main-input' id='fileinput' name='file' placeholder='Subir archivo' required='required' type='file'>
+            <input class='main-input' id='fileinput' name='apk' placeholder='Subir archivo' required='required' type='file'>
           </div>
           <div class='frm-row  '>
             <!--
