Upload y Run de APK

--- a/public/config.html
+++ b/public/config.html
@@ -29,6 +29,9 @@
           </div>
         </fieldset>
       </form>
+      <div id="apk-output">
+        <p></p>
+      </div>
     </section>
     <section class='main' id='step-2'></section>
     <script data-main='js/qaw-config' src='js/libs/requirejs-min.js' type='text/javascript'></script>
