--- a/public/config.html
+++ b/public/config.html
@@ -6,6 +6,18 @@
     <link href='images/favicon.ico' rel='shortcut icon'>
     <link href='css/normalize.css' rel='stylesheet' type='text/css'>
     <link href='css/qaw-server.css' rel='stylesheet' type='text/css'>
+    <!-- MINI STYLE! trasladar a .CSS despues -->
+    <style>
+      div#apk-output {
+        height: 200px;
+        width: 80%;
+        font-size: 12px;
+        margin-left: 10%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <section class='main-config' id='step-1'>
