--- a/public/app.html
+++ b/public/app.html
@@ -8,6 +8,10 @@
   </head>
   <body class='app-mesagges'>
     <h1 class='logo logo-big'>QA Wall Events</h1>
+    <div id="contentSelect">
+        <label id="labelSelect" for='selectDevice'>Device: </label>
+        <select id="selectDevice" name='device' placeholder='Device Id'></select>
+    </div>
     <div id='chartContainer' style='height: 600px; width: 100;'></div>
     <script data-main='js/qaw-chart' src='js/libs/requirejs-min.js' type='text/javascript'></script>
     <div id="contentButton">
@@ -25,6 +29,6 @@
             <input id="buttonControlMovement" class="btn" type="button" value='MOVE ON'>
         </div>
     </div>
-    <select id="selectDevice" name='device' placeholder='Device Id'></select>
+
   </body>
 </html>
