--- a/public/app.html
+++ b/public/app.html
@@ -37,30 +37,32 @@
         </div>
      
         <div id="sidebar">
-            <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
+          <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
             <fieldset class='wrapper'>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
-                <input class='main-input' id='fileinput' name='apk' placeholder='Subir archivo' required='required' type='file'>
+                <img src="images/android_icon.png"><input class='main-input' id='fileinput' name='apk' placeholder='Subir archivo' type='file' accept="apk">
               </div>
-              <div class='frm-row  '>
-                <!--
-                  <input class='btn' type='reset' value='Reset'>
-                  <input class='btn close' type='button' value='Apagar'>
-                -->
-                <input class='btn primary' type='submit' value='Arriba'>
+              <div class='frm-row'>
+                <label for='fileinput'>Subir archivo</label>
+                <img src="images/apple_icon.png"><input class='main-input' id='fileinput' name='ipa' placeholder='Subir archivo' type='file' accept="app">
               </div>
+              <input class='btn primary' type='submit' value='Subir Archivo/s'>
             </fieldset>
           </form>
           <div id="apk-output">
             <code></code>
           </div>
-          <div id="apk-reinstall">
-            <form action='javascript:void(0)' class='main-form' id='reinstall-form' method='post'>
-              <p id="apk-reinstall-name"></p>
+          <div id="app-install">
+            <form action='javascript:void(0)' class='main-form' id='install-form' method='post'>
+              <p id="apk-install-name"></p>
+              <p id="ipa-install-name"></p>
               <fieldset class='wrapper'>
-                  <input id="apk-reinstall-button" class='btn primary' type='submit' value='Reinstalar'>
-                  <input id="apk-reinstall-newfile" class='btn primary' type='submit' value='Subir Otro'>
+                  <input id="app-install-button" class='btn primary' type='submit' value='Instalar'>
+                  <input id="app-launch-button" class='btn primary' type='submit' value='Lanzar'>
+                  <input id="app-uninstall-button" class='btn primary' type='submit' value='Desinstalar' disabled="">
+                  <input id="app-reboot-button" class='btn primary' type='submit' value='Reboot' disabled="">
+                  <input id="app-install-newfile" class='btn primary' type='submit' value='Subir otro archivo'>
               </fieldset>
             </form>
           </div>
