Change: logic to zoom available and disabled. Not finished yet

--- a/public/app.html
+++ b/public/app.html
@@ -25,8 +25,8 @@
                 <button id="buttonEndEvent" class="buttonAux" type="button">End Event</button>
                 -->
                 <div class='actions-bar-zoom'>
-                      <input id="buttonZoomIn" class="btn primary" type="button" value='+'>
-                      <input id="buttonZoomOut" class="btn primary" type="button" value='-'>
+                      <input id="buttonZoomIn" class="btn primary" type="button" value='+' disabled>
+                      <input id="buttonZoomOut" class="btn primary" type="button" value='-' disabled>
                 </div>
                 <div class='actions-bar-buttons'>
                     <input id="buttonSeeAll" class="btn" type="button" value='SEE ALL'>
