Algunos cambios menores

--- a/public/app.html
+++ b/public/app.html
@@ -50,7 +50,7 @@
               <input class='btn primary' type='submit' value='Subir Archivo/s'>
             </fieldset>
           </form>
-          <div id="apk-output">
+          <div id="app-output">
             <code></code>
           </div>
           <div id="app-install">
