Add Sidebar to Index_Web view

--- a/public/app.html
+++ b/public/app.html
@@ -37,7 +37,7 @@
         </div>
      
         <div id="sidebar">
-          <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
+          <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form-config' method='post'>
             <fieldset class='wrapper'>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
