--- a/public/config.html
+++ b/public/config.html
@@ -14,7 +14,7 @@
           <div class='logo logo-small'>QA Wall</div>
         </div>
       </header>
-      <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form' method='post'>
+      <form action='api/upload_apk' class='main-form' enctype='multipart/form-data' id='main-form-config' method='post'>
         <fieldset class='wrapper'>
           <div class='frm-row'>
             <label for='fileinput'>Subir archivo</label>
