Change: button see all logic

--- a/public/app.html
+++ b/public/app.html
@@ -29,7 +29,7 @@
                       <input id="buttonZoomOut" class="btn primary" type="button" value='-' disabled>
                 </div>
                 <div class='actions-bar-buttons'>
-                    <input id="buttonSeeAll" class="btn" type="button" value='SEE ALL'>
+                    <input id="buttonSeeAll" class="btn" type="button" value='SEE ALL' disabled>
                     <input id="buttonControlMovement" class="btn" type="button" value='MOVE ON'>
                 </div>
             </div>
