--- a/public/config.html
+++ b/public/config.html
@@ -37,7 +37,7 @@
             <fieldset class='wrapper'>
                 <input id="app-install-button" class='btn primary' type='submit' value='Instalar'>
                 <input id="app-launch-button" class='btn primary' type='submit' value='Lanzar'>
-                <input id="app-uninstall-button" class='btn primary' type='submit' value='Desinstalar' disabled="">
+                <input id="app-uninstall-button" class='btn primary' type='submit' value='Desinstalar'>
                 <input id="app-reboot-button" class='btn primary' type='submit' value='Reboot' disabled="">
                 <input id="app-install-newfile" class='btn primary' type='submit' value='Subir otro archivo'>
             </fieldset>
