Fix reset form right

--- a/public/app.html
+++ b/public/app.html
@@ -41,11 +41,11 @@
             <fieldset class='wrapper'>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
-                <img src="images/android_icon.png"><input class='main-input' id='fileinput' name='apk' placeholder='Subir archivo' type='file' accept="apk">
+                <img src="images/android_icon.png"><input class='main-input js-fileinput' id='fileinput' name='apk' placeholder='Subir archivo' type='file' accept="apk">
               </div>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
-                <img src="images/apple_icon.png"><input class='main-input' id='fileinput' name='ipa' placeholder='Subir archivo' type='file' accept="app">
+                <img src="images/apple_icon.png"><input class='main-input js-fileinput' id='fileinput' name='ipa' placeholder='Subir archivo' type='file' accept="app">
               </div>
               <input class='btn primary' type='submit' value='Subir Archivo/s'>
             </fieldset>
