--- a/public/index_web.html
+++ b/public/index_web.html
@@ -140,11 +140,11 @@
             <fieldset class='wrapper'>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
-                <img src="images/android_icon.png"><input class='main-input' id='fileinput' name='apk' placeholder='Subir archivo' type='file' accept="apk">
+                <img src="images/android_icon.png"><input class='main-input js-fileinput' id='fileinput' name='apk' placeholder='Subir archivo' type='file' accept="apk">
               </div>
               <div class='frm-row'>
                 <label for='fileinput'>Subir archivo</label>
-                <img src="images/apple_icon.png"><input class='main-input' id='fileinput' name='ipa' placeholder='Subir archivo' type='file' accept="app">
+                <img src="images/apple_icon.png"><input class='main-input js-fileinput' id='fileinput' name='ipa' placeholder='Subir archivo' type='file' accept="app">
               </div>
               <input class='btn primary' type='submit' value='Subir Archivo/s'>
             </fieldset>
@@ -160,7 +160,7 @@
                   <input id="app-install-button" class='btn primary' type='submit' value='Instalar'>
                   <input id="app-launch-button" class='btn primary' type='submit' value='Lanzar'>
                   <input id="app-uninstall-button" class='btn primary' type='submit' value='Desinstalar'>
-                  <input id="app-reboot-button" class='btn primary' type='submit' value='Reboot' disabled="">
+                  <!-- <input id="app-reboot-button" class='btn primary' type='submit' value='Reboot' disabled=""> -->
                   <input id="app-install-newfile" class='btn primary' type='submit' value='Subir otro archivo'>
               </fieldset>
             </form>
